# kvanta-lang.github.io

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  index.html  package-lock.json  package.json  vite.config.js  Дока-Кванта-v0.txt
docs/: index.html
docs/assets/: index-B72v-tyw.js  index-BCLV_X1k.js  index-BF8ks2-B.js  index-BXL7CCY1.js  index-BcOPgPyt.js  index-Bq8YJAES.js  index-CK2DzhuS.js  index-CO8SC_eG.js  index-COcV9gqP.js  index-CTSdUt29.js  index-CsS-PcfO.js  index-CuVmB-f2.js  index-CvELewm5.js  index-DZHtf0yP.js  index-Dkl9D1QV.js  index-DqC37Gjr.js  index-L9_Gkbx-.js  index-XMsPo3Dm.js  index-guuB-99z.js  quanta_lang_bg-CTmBUqi9.wasm  quanta_lang_bg-CkhAsR2Q.wasm  quanta_lang_bg-D8kRPWyt.wasm  quanta_lang_bg-hHEgpKWa.wasm  quanta_lang_bg-qu6AnI2D.wasm  quanta_lang_bg-t7CueOHW.wasm
grammar/: grammar.js  grammar.pest  grammar.terms.js  highlight.js  parser.terms.js  quanta copy.grammar  quanta.grammar  test.txt  tokens.js
quanta-lang/: Cargo.toml  LICENSE_MIT
quanta-lang/src/: compiler.rs  execution.rs  lib.rs  linear_execution.rs  linear_runtime.rs  program.rs  runtime.rs  tests.rs  utils.rs
quanta_code_editor/: .gitignore  Makefile  README.md  editor.bundle.js  editor.mjs  index.html  package.json  rollup.config.js  tsconfig.json
quanta_code_editor/quanta/: package.json
quanta_code_editor/src/: index.ts
quanta_parser/: Cargo.toml
src/: lib.rs  parser.rs
web/: canvas-runtime.js  colors.css  custom-theme.ts  highlight.ts  main.js  quanta-support.js  quanta-support.ts  theme.ts
web/code_editor/: urls.py  (+2 more)
www/: index.css  quanta.js
(+25 files in other folders)
