[package]
name = "quanta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
tree-sitter = "0.20.10"
tree-sitter-quanta = { path = "grammar" }
